remove protobuf and mqtt stuff

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
     main.cpp
 )
 
-TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} paho-mqttpp3 paho-mqtt3a)
+TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME})
